# un-kicker-control

./: README.md  pyproject.toml  setup.cfg  setup.py
src/: __main__.py  main.py  motherboard.py  nanokicker.py
src/gui/: main_window.py  nanokicker_widget.py
